# irobot_worlds

./: CMakeLists.txt  README.md  package.xml
launch/: CentroPiaggio.launch  cp_wf_and_people.launch  cp_with_furniture.launch  cp_with_furniture_and_people.launch  empty_world.launch  one_iRobot_at_CPwf.launch  one_iRobot_at_CPwf_and_people.launch  warehouse.launch  warehouse_with_people.launch
models/CentroPiaggioReal/: model.config  model.sdf  model_no_acquario.sdf
models/Office/: model.config  model.sdf
models/Warehouse/: model.config  model.sdf
models/acquario_table/: acquario_table.dae  model.config  model.sdf
models/bookshelf/: model.config  model.sdf
models/bookshelf_1_5m/: model.config  model.sdf  scaffale.dae
models/bookshelf_1m/: model.config  model.sdf
models/chair/: model.config  model.sdf
models/cylinder_box/: model.config  model.sdf
models/dresser/: model.config  model.sdf
models/fork_lift/: fork_lift.dae  model.config  model.sdf
models/lab_desk/: lab_desk.dae  model.config  model.sdf
models/lab_table/: model.config  model.sdf
models/lab_table2/: lab_table2.dae  model.config  model.sdf
models/office_chair/: model.config  model.sdf  office_chair.dae
models/office_desk/: model.config  model.sdf  office_desk.dae
models/pallet/: model.config  model.sdf  pallet.dae
models/radiator/: model.config  model.sdf  radiator.dae
models/real_table/: model.config  model.sdf
src/: person_controller.cpp  worker_controller.cpp
world/: cp_empty.world  one_iRobot_at_CPwf.world  real_centro_piaggio.world  warehouse.world
(+21 files in other folders)
